[package]
name = "qesp"
version = "0.2.1"
authors = ["carrascomj <carrascomurielj@gmail.com>"]
edition = "2018"
description = "Tool to remove annoying characters of names in a directory."
keywords = ["shell", "filename", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"

[dependencies]
structopt="0.3"
regex = "1"
